<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Lista VIP para o devandroid.gkp.applistacurso.model.Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_curso">devandroid.gkp.applistacurso.model.Curso desejado</string>
    <string name="txt_hint_edit_telefone">Telefone para contato</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>


</resources>