<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_titulo"
                android:textSize="24sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_primeiro_nome"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editSobrenome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_sobrenome"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editTelefone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_telefone"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editCursoDesejado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_curso"

                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtListaSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_selecione_um_curso"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="181dp"
                    android:background="@color/buttons"
                    android:text="@string/txt_button_limpar"
                    android:textColor="#F5F5F5" />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/buttons"
                    android:text="@string/txt_button_salvar"
                    android:textColor="#F5F5F5" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/buttons"
                android:text="@string/txt_button_finalizar"
                android:textColor="#F5F5F5" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>